--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,14 @@
   --ddd: #ddd;
   --blue: #102f5e;
   --bgTodo: #395169;
+  --bg: #01172c;
 }
 
 body {
-  background-image: url("../img/background.jpg");
+  /* background-image: url("../img/background.jpg"); */
+  /* background-image: linear-gradient(120deg, var(--blue) 0%, var(--ddd) 100%); */
+  /* background-image: linear-gradient(to top, var(--bg) 0%, var(--bgTodo) 100%); */
+  background-color: var(--bg);
   background-position: center;
   background-size: cover all;
   background-repeat: no-repeat;
